[project]
name = "xiaomi-wallet-gui"
version = "1.0.0"
description = "小米钱包每日任务GUI应用 - 支持多账号管理和自动签到"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "xiaomi-wallet-gui"}
]
keywords = ["xiaomi", "wallet", "checkin", "gui", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "flet>=0.28.3",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
xiaomi-wallet-gui = "gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyinstaller]
name = "xiaomi-wallet-gui"
entry-points = ["gui.py"]
options = [
    "--onefile",
    "--windowed",
    "--add-data=README.md:.",
]
