[project]
name = "xiaomi-wallet-gui"
version = "1.0.0"
description = "小米钱包每日任务GUI应用 - 支持多账号管理和自动签到"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "xiaomi-wallet-gui"}
]
keywords = ["xiaomi", "wallet", "checkin", "gui", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "flet[all]>=0.25.0",
    "qrcode[pil]>=7.4.2",
    "requests>=2.32.5",
    "urllib3>=2.0.0",
    "pillow>=10.0.0",
    "watchdog",
    "flet-cli"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
xiaomi-wallet-gui = "gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "README.md",
]

[tool.pyinstaller]
name = "xiaomi-wallet-gui"
entry-points = ["gui.py"]
options = [
    "--onefile",
    "--windowed",
    "--add-data=README.md:.",
]

# Flet构建配置
[tool.flet]
app.module = "gui"
compile.app = false
compile.packages = false

# Windows平台配置
[tool.flet.windows]
app.module = "main_windows"

# macOS平台配置
[tool.flet.macos]
app.module = "main_macos"

[tool.flet.android]
package = "com.xiaomi.wallet.gui"
app.module = "main_android"
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_EXTERNAL_STORAGE"
]
signing_key_store = ""
signing_key_store_password = ""
signing_key_password = ""
signing_key_alias = "upload"

[tool.flet.ios]
bundle_id = "com.xiaomi.wallet.gui"
app.module = "main_ios"
team_id = ""

[tool.flet.ios.info_plist_additions]
NSInternetUsage = "此应用需要网络访问来执行小米钱包任务"
NSNetworkUsageDescription = "此应用需要网络访问来执行小米钱包任务"

[tool.flet.ios.info_plist_additions.NSAppTransportSecurity]
NSAllowsArbitraryLoads = true

# Web平台配置已移除，专注于桌面和移动平台
